Fix palapa image alignment

--- a/public/sass/_animations.scss
+++ b/public/sass/_animations.scss
@@ -101,7 +101,9 @@
 
   &.four {
     position: absolute;
+    top: -3%;
     opacity: 0;
+    transform: translateX(-26%);
 
     &.go {
        @include animation("intro-step-four 0.8s forwards");
